[project]
name = "liqx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.11",
    "cosmpy>=0.11.0",
    "gql[all]==3.5.0",
    "graphql-core==3.2.5",
    "loguru==0.7.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "uagents==0.23.6",
    "web3==7.7.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==0.25.2",
]
